user test fixes

--- a/ghostly/_includes/comment-section.html
+++ b/ghostly/_includes/comment-section.html
@@ -147,7 +147,7 @@
 				<li>
 					<!-- width: 450px; float: left; /// margin-left: 450px;-->
 					<input id="comment-submit" type="submit" value="submit" style="width: 51%; float: left">
-					<div class="content fade-in-slow" style="width: 47%; float: right"><a href = "/skipped-reading.html" type="donot">do not understand</a></div>
+					<div class="content fade-in-slow" style="width: 47%; float: right"><a href = "skipped-reading.html" type="donot">do not understand</a></div>
 				</li>
 			</ul>
 		</form>
@@ -220,7 +220,7 @@
 	 border-radius: 8px;
 	 padding: 10px 10px;
 	 background: #F8F8FF;
-	 color: #666666;
+	 color: #9DC384;
 	 font-family: "Georgia", serif;
 	 font-weight: bold;
 	 font-size: 1em;
@@ -232,7 +232,7 @@
 	 text-align: center;
 	 
 }
-.comments-form ul li input[type='submit']:hover{color:#9DC384}
+.comments-form ul li input[type='submit']:hover{color:#666666}
 
  .comments-form ul li input[type='text'], .comments-form ul li textarea {
 	 width: 50%;
