--- a/ghostly/_includes/head.html
+++ b/ghostly/_includes/head.html
@@ -2,6 +2,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="keywords" content="brown university, sheridan feucht, sfeucht">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="favicon_io/site.webmanifest">
   <!-- seo includes setting the title <title>{{ site.title }} </title>-->
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}"> 
